[package]
name = "bevy_prepass"
version = "0.9.0"
edition = "2021"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides prepass utilities for Bevy Engine."
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = ["dep:bevy_utils"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.9.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.9.0" }
bevy_float_ord = { path = "../bevy_float_ord", version = "0.9.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.9.0" }
bevy_render = { path = "../bevy_render", version = "0.9.0" }
bevy_utils = { path = "../bevy_utils", version = "0.9.0", optional = true }

radsort = "0.1"
