[package]
name = "bevy_schedule_runner"
version = "0.9.0"
edition = "2021"
description = "Provides a schedule runner for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.9.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.9.0", default-features = false }
bevy_utils = { path = "../bevy_utils", version = "0.9.0" }

# Must match that in `bevy_app`!
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [ "Window" ] }
